[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Andrew Lee <andrew.lee@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
lazy_static = "1.4.0"
structopt = "0.3.5"
num-traits = "0.2"
regex = "1"
enum-display-derive = "0.1.0"
libmath = "0.1.4"